--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Equipe agroambiente</title>
+    <title>Equipe Alura Start</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
 
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="Sucessao-familiar-rural-entenda-como-e-feita-2.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item"><a href="#escola">Escola</a></li>
             <li class="cabecalho-lista-item"><a href="#estudante">Estudante</a></li>
@@ -22,13 +22,13 @@
     </header>
     <section id="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre a fundação</h2>
-            <p class="escola-texto-um">A equipe agroambiente foi fundada em 2010 e tem como objetivo ensinar Pensamento
+            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento
                 Computacional, através do ensino de Programação.</p>
             <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a
                 turma favorita por todos os professores e professoras que nos ajudam!</p>
         </div>
-        <img class="escola-imagem" src="Agricultura-sustentavel.jpg" alt="imagem que representa uma professora em sala de aula">
+        <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
     </section>
 
     <section id="estudante">
@@ -36,7 +36,7 @@
         <div class="estudante-todos">
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="A-agricultura-e-meio-ambiente-cópia.jpg" alt="foto do marcelo">
+                <img class="estudante-imagem" src="Marcelo.jpeg" alt="foto do marcelo">
                 <h3 class="estudante-nome">Marcelo</h3>
                 <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
@@ -46,7 +46,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Agricultura-sustentavel.jpg" alt="foto da gabi">
+                <img class="estudante-imagem" src="Gabi.jpg" alt="foto da gabi">
                 <h3 class="estudante-nome">Gabriela</h3>
                 <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
@@ -56,7 +56,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="A-agricultura-e-meio-ambiente-cópia.jpg" alt="foto da lizandra">
+                <img class="estudante-imagem" src="Liz.jpg" alt="foto da lizandra">
                 <h3 class="estudante-nome">Lizandra</h3>
                 <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
