--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a
                 turma favorita por todos os professores e professoras que nos ajudam!</p>
         </div>
-        <img class="escola-imagem" src="images (1).jpeg" alt="imagem que representa uma professora em sala de aula">
+        <img class="escola-imagem" src="maquinas-para-agricultura.png" alt="imagem que representa uma professora em sala de aula">
     </section>
 
     <section id="estudante">
