--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="download.jpeg" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="pngtree-farming-illustration-png-image_9200607.png" alt="logo da alura start">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item"><a href="#escola">Escola</a></li>
             <li class="cabecalho-lista-item"><a href="#estudante">Estudante</a></li>
