--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     </header>
     <section id="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <h2 class="escola-titulo">Sobre a agricultura</h2>
             <p class="escola-texto-um"A agricultura é essencial para a subsistência humana, fornecendo alimentos, fibras e matérias-primas. A adoção de práticas sustentáveis é crucial para enfrentar desafios como a escassez de água e o esgotamento do solo. Tecnologias modernas, como a agricultura de precisão e a biotecnologia, estão sendo cada vez mais empregadas para aumentar a eficiência e reduzir os impactos ambientais.
+
 </p>
             <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a
                 turma favorita por todos os professores e professoras que nos ajudam!</p>
