--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
     <section id="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a agricultura</h2>
-            <p class="escola-texto-um"A agricultura é essencial para a subsistência humana, fornecendo alimentos, fibras e matérias-primas. 
- A adoção de práticas sustentáveis é crucial para enfrentar desafios como a escassez de água e o esgotamento do solo. 
-  Tecnologias modernas, como a agricultura de precisão e a biotecnologia, estão sendo cada vez mais empregadas para aumentar a eficiência e reduzir os impactos ambientais.
+            <p class="escola-texto-um"Agricultura é a prática de cultivo do solo para a produção de alimentos e de matérias-primas. Consiste, ainda, em uma atividade econômica pertencente ao setor primário. Os diferentes tipos de agricultura são: tradicional, moderna, familiar, patronal e orgânica.
               </p>
         </div>
         <img class="escola-imagem" src="maquinas-para-agricultura.png" alt="imagem que representa uma professora em sala de aula">
