--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="pngtree-farming-illustration-png-image_9200607.png" alt="logo da alura start">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item"><a href="#escola">Escola</a></li>
-            <li class="cabecalho-lista-item"><a href="#estudante">Estudante</a></li>
+            <li class="cabecalho-lista-item"><a href="#agricola">agricola</a></li>
+            <li class="cabecalho-lista-item"><a href="#operador">operador</a></li>
         </ul>
     </header>
     <section id="escola">
