--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     <section id="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a agricultura</h2>
-            <p class="escola-texto-um"Agricultura é a prática de cultivo do solo para a produção de alimentos e de matérias-primas. Consiste, ainda, em uma atividade econômica pertencente ao setor primário. Os diferentes tipos de agricultura são: tradicional, moderna, familiar, patronal e orgânica.
-              </p>
+            <p class="escola-texto-um">Tudo está interligado: a terra, a água, o ar, as plantas e os animais.” “A agricultura ecológica não trabalha somente com as plantas mas com o sistema inteiro solo-planta-clima.” “A recuperação da paisagem, do meio ambiente, é um fator básico para a agricultura sadia<p 
         </div>
         <img class="escola-imagem" src="maquinas-para-agricultura.png" alt="imagem que representa uma professora em sala de aula">
     </section>
